// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToDo renders assigneeId input disabled when clearAssignee is true 1`] = `
<div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
      for="assigneeId"
    >
      Assignee
    </label>
    <select
      class="form-control"
      disabled=""
      id="assigneeId"
      name="assigneeId"
    >
      <option
        value=""
      >
        Clear Assignee
      </option>
      <option
        value="1"
      >
        foo@ex.co
      </option>
    </select>
    <div
      class="ml-1 mt-1 form-group"
    >
      <div
        class="form-check"
      >
        <input
          checked=""
          class="form-check-input"
          id="clearAssignee"
          name="clearAssignee"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="clearAssignee"
          title=""
        >
          Clear assignee
        </label>
      </div>
    </div>
  </div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
      for="dueBy"
    >
      Due By
    </label>
    <input
      class="form-control"
      id="dueBy"
      name="dueBy"
      placeholder="mm/dd/yyyy"
      type="date"
      value="bar"
    />
    <div
      class="ml-1 mt-1 form-group"
    >
      <div
        class="form-check"
      >
        <input
          class="form-check-input"
          id="clearDueBy"
          name="clearDueBy"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="clearDueBy"
          title=""
        >
          Clear due by
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`ToDo renders assigneeId input enabled when clearAssignee is false 1`] = `
<div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
      for="assigneeId"
    >
      Assignee
    </label>
    <select
      class="form-control"
      id="assigneeId"
      name="assigneeId"
    >
      <option
        value=""
      >
        Clear Assignee
      </option>
      <option
        value="1"
      >
        foo@ex.co
      </option>
    </select>
    <div
      class="ml-1 mt-1 form-group"
    >
      <div
        class="form-check"
      >
        <input
          class="form-check-input"
          id="clearAssignee"
          name="clearAssignee"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="clearAssignee"
          title=""
        >
          Clear assignee
        </label>
      </div>
    </div>
  </div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
      for="dueBy"
    >
      Due By
    </label>
    <input
      class="form-control"
      id="dueBy"
      name="dueBy"
      placeholder="mm/dd/yyyy"
      type="date"
      value="bar"
    />
    <div
      class="ml-1 mt-1 form-group"
    >
      <div
        class="form-check"
      >
        <input
          class="form-check-input"
          id="clearDueBy"
          name="clearDueBy"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="clearDueBy"
          title=""
        >
          Clear due by
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`ToDo renders dueBy input disabled when clearDueBy is true 1`] = `
<div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
      for="assigneeId"
    >
      Assignee
    </label>
    <select
      class="form-control"
      disabled=""
      id="assigneeId"
      name="assigneeId"
    >
      <option
        value=""
      >
        Clear Assignee
      </option>
      <option
        value="1"
      >
        foo@ex.co
      </option>
    </select>
    <div
      class="ml-1 mt-1 form-group"
    >
      <div
        class="form-check"
      >
        <input
          checked=""
          class="form-check-input"
          id="clearAssignee"
          name="clearAssignee"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="clearAssignee"
          title=""
        >
          Clear assignee
        </label>
      </div>
    </div>
  </div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
      for="dueBy"
    >
      Due By
    </label>
    <input
      class="form-control"
      disabled=""
      id="dueBy"
      name="dueBy"
      placeholder="mm/dd/yyyy"
      type="date"
      value="bar"
    />
    <div
      class="ml-1 mt-1 form-group"
    >
      <div
        class="form-check"
      >
        <input
          checked=""
          class="form-check-input"
          id="clearDueBy"
          name="clearDueBy"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="clearDueBy"
          title=""
        >
          Clear due by
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`ToDo renders dueBy input enabled when clearDueBy is false 1`] = `
<div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
      for="assigneeId"
    >
      Assignee
    </label>
    <select
      class="form-control"
      disabled=""
      id="assigneeId"
      name="assigneeId"
    >
      <option
        value=""
      >
        Clear Assignee
      </option>
      <option
        value="1"
      >
        foo@ex.co
      </option>
    </select>
    <div
      class="ml-1 mt-1 form-group"
    >
      <div
        class="form-check"
      >
        <input
          checked=""
          class="form-check-input"
          id="clearAssignee"
          name="clearAssignee"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="clearAssignee"
          title=""
        >
          Clear assignee
        </label>
      </div>
    </div>
  </div>
  <div
    class="form-group"
  >
    <label
      class="form-label"
      for="dueBy"
    >
      Due By
    </label>
    <input
      class="form-control"
      id="dueBy"
      name="dueBy"
      placeholder="mm/dd/yyyy"
      type="date"
      value="bar"
    />
    <div
      class="ml-1 mt-1 form-group"
    >
      <div
        class="form-check"
      >
        <input
          class="form-check-input"
          id="clearDueBy"
          name="clearDueBy"
          type="checkbox"
        />
        <label
          class="form-check-label"
          for="clearDueBy"
          title=""
        >
          Clear due by
        </label>
      </div>
    </div>
  </div>
</div>
`;
